--- a/.github/workflows/clear-ephemeral.yaml
+++ b/.github/workflows/clear-ephemeral.yaml
@@ -3,11 +3,15 @@ name: Clear Ephemeral Environments
 run-name: Clear
 
 on:
-  delete:
+  pull_request:
+    types:
+      - closed
 
 env:
   DB_NAME: realworld-app
   ORG_NAME: santunioni
+  PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_TOKEN_ID }}
+  PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_TOKEN }}
 
 jobs:
   terraform:
