--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -8,6 +8,9 @@ on:
     branches:
       - main
 
+concurrency:
+  group: pr-${{ github.ref }}
+
 jobs:
   ci:
     uses: ./.github/workflows/ci.yaml
