--- a/.github/workflows/clear-ephemeral.yaml
+++ b/.github/workflows/clear-ephemeral.yaml
@@ -16,9 +16,14 @@ env:
 concurrency:
   group: pr-${{ github.ref }}
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   terraform:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
