--- a/.github/workflows/on-pr-closed.yaml
+++ b/.github/workflows/on-pr-closed.yaml
@@ -9,3 +9,5 @@ jobs:
     uses: ./.github/workflows/clear.yaml
     with:
       environment: ephemeral-pr-${{ github.event.pull_request.number }}
+      continue-on-error: false
+    secrets: inherit
