--- a/.github/workflows/clear.yaml
+++ b/.github/workflows/clear.yaml
@@ -8,6 +8,10 @@ on:
       environment:
         required: true
         type: string
+      continue-on-error:
+        required: false
+        type: boolean
+        default: false
 
 env:
   DB_NAME: realworld-app
@@ -38,7 +42,7 @@ jobs:
           terraform_wrapper: false
 
       - name: Clear Ephemeral Environments
-        continue-on-error: true
+        continue-on-error: ${{ inputs.continue-on-error }}
         working-directory: packages/server/terraform
         run: |
           terraform init -reconfigure -backend-config="key=realworld-app/$TF_VAR_ENVIRONMENT/lambda.tfstate"
@@ -46,6 +50,7 @@ jobs:
           terraform destroy -auto-approve
         env:
           TF_VAR_ENVIRONMENT: ${{ inputs.environment }}
+          TF_VAR_DATABASE_URL: mysql://realworld-app:realworld-app@localhost:3306/realworld-app
 
   pscale:
     runs-on: ubuntu-latest
@@ -53,8 +58,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Turn Down Database
-        continue-on-error: true
-        working-directory: .pscale/cli-helper-scripts
+        continue-on-error: ${{ inputs.continue-on-error }}
+        working-directory: scripts/pscale
         run: |
-          . use-pscale-docker-image.sh
+          . functions.sh
+
           pscale branch delete $DB_NAME ${{ inputs.environment }} --org $ORG_NAME --force
