fix: on-schedule script

--- a/.github/workflows/on-schedule.yaml
+++ b/.github/workflows/on-schedule.yaml
@@ -23,9 +23,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/credentials
       - run: |
-          KEYS=$(aws s3api list-objects --bucket santunioni-iac-state --prefix realworld-app/ --output json --query 'Contents[*].Key' | jq '[.[] | select(endswith("lambda.tf"))]')
-          ENVIRONMENTS=jq '[.[] | sub("^realworld-app\/";"") | sub("\/lambda.tf$";"") | select(. != "main") | select(. != "production")]'
-          echo "ENVIRONMENTS=$ENVIRONMENTS" >> $GITHUB_OUTPUT
+          KEYS=$(aws s3api list-objects --bucket santunioni-iac-state --prefix realworld-app/ --output json --query 'Contents[*].Key' | jq '[.[] | select(endswith("lambda.tfstate"))]')
+          ENVIRONMENTS=$(echo $KEYS | jq '[.[] | sub("^realworld-app\/";"") | sub("lambda.tfstate$";"") | sub("\/";"") | select(. != "main") | select(. != "production") | select(. != "")]')
+          echo "ENVIRONMENTS=$(echo $ENVIRONMENTS | jq tostring)" >> $GITHUB_OUTPUT
         shell: bash
         id: list
     outputs:
