fix: on-schedule script

--- a/.github/workflows/on-schedule.yaml
+++ b/.github/workflows/on-schedule.yaml
@@ -25,7 +25,7 @@ jobs:
       - run: |
           KEYS=$(aws s3api list-objects --bucket santunioni-iac-state --prefix realworld-app/ --output json --query 'Contents[*].Key' | jq '[.[] | select(endswith("lambda.tfstate"))]')
           ENVIRONMENTS=$(echo $KEYS | jq '[.[] | sub("^realworld-app\/";"") | sub("lambda.tfstate$";"") | sub("\/";"") | select(. != "main") | select(. != "production") | select(. != "")]')
-          echo "ENVIRONMENTS=$(echo $ENVIRONMENTS | jq tostring)" >> $GITHUB_OUTPUT
+          echo "ENVIRONMENTS=$(echo $ENVIRONMENTS | jq -r tostring)" >> $GITHUB_OUTPUT
         shell: bash
         id: list
     outputs:
