--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -168,7 +168,7 @@ jobs:
         name: Deploy ${{ inputs.environment }}
         working-directory: packages/server/terraform
         run: |
-          terraform workspace select $TF_VAR_ENVIRONMENT || terraform workspace new $TF_VAR_ENVIRONMENT
+          terraform workspace select -or-create $TF_VAR_ENVIRONMENT
           terraform init
           terraform refresh
           terraform apply -auto-approve
