--- a/.github/workflows/on-schedule.yaml
+++ b/.github/workflows/on-schedule.yaml
@@ -23,9 +23,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/credentials
       - run: |
-          KEYS=$(aws s3api list-objects --bucket santunioni-iac-state --prefix realworld-app/ --output json --query 'Contents[*].Key' | jq '[.[] | select(endswith("lambda.tfstate"))]')
-          ENVIRONMENTS=$(echo $KEYS | jq '[.[] | sub("^realworld-app\/";"") | sub("lambda.tfstate$";"") | sub("\/";"") | select(. != "main") | select(. != "production") | select(. != "")]')
-          echo "ENVIRONMENTS=$(echo $ENVIRONMENTS | jq -r tostring)" >> $GITHUB_OUTPUT
+          KEYS=$(aws s3api list-objects --bucket santunioni-iac-state --prefix env:/ --output json --query 'Contents[*].Key' | jq '[.[] | select(. | test("realworld-app\/\\w+.tfstate$"))]')
+          TERRAFORM_WORKSPACES=$(echo $KEYS | jq '[.[] | sub("^env:\/";"") | sub("\/realworld-app\/\\w+.tfstate$";"")]')
+          echo "ENVIRONMENTS=$(echo $TERRAFORM_WORKSPACES | jq -r tostring)" >> $GITHUB_OUTPUT
         shell: bash
         id: list
     outputs:
