--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -169,13 +169,12 @@ jobs:
         working-directory: packages/server/terraform
         run: |
           terraform init
-          terraform workspace select -or-create $TF_VAR_ENVIRONMENT
+          terraform workspace select -or-create ${{ inputs.environment }}
           terraform refresh
           terraform apply -auto-approve
           echo "API_GATEWAY_URL=$(terraform output API_GATEWAY_URL | jq -r)" >> $GITHUB_OUTPUT
         env:
           TF_VAR_DATABASE_URL: ${{ steps.dburl.outputs.DATABASE_URL }}
-          TF_VAR_ENVIRONMENT: ${{ inputs.environment }}
 
       - name: Wait ${{ inputs.environment }}
         run: |
