--- a/.github/workflows/clear.yaml
+++ b/.github/workflows/clear.yaml
@@ -41,13 +41,13 @@ jobs:
           terraform_version: 1.4.4
           terraform_wrapper: false
 
-      - name: Clear Ephemeral Environments
+      - name: Clear Computing Resources
         continue-on-error: ${{ inputs.continue-on-error }}
         working-directory: packages/server/terraform
         run: |
           touch lambda.zip
-          terraform workspace select ${{ inputs.environment }} || exit 0
           terraform init
+          terraform workspace select ${{ inputs.environment }} || exit 0
           terraform refresh
           terraform destroy -auto-approve
           terraform workspace delete ${{ inputs.environment }}
@@ -59,7 +59,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Turn Down Database
+      - name: Clear Database
         continue-on-error: ${{ inputs.continue-on-error }}
         working-directory: scripts/pscale
         run: |
