--- a/.github/workflows/clear.yaml
+++ b/.github/workflows/clear.yaml
@@ -36,12 +36,12 @@ jobs:
           terraform_version: 1.4.4
           terraform_wrapper: false
 
-      - name: Clear Computing Resources
+      - name: Terraform Destroy
         working-directory: packages/server/terraform
         run: |
           touch lambda.zip
           terraform init
-          terraform workspace select ${{ inputs.environment }} || echo "Non existent workspace" && exit 0
+          terraform workspace select ${{ inputs.environment }} || exit 0
           terraform refresh
           terraform destroy -auto-approve
           terraform workspace select default
@@ -54,7 +54,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Clear Database
+      - name: Database Branch Delete
         working-directory: scripts/pscale
         run: |
           . functions.sh
