--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -168,13 +168,13 @@ jobs:
         name: Deploy ${{ inputs.environment }}
         working-directory: packages/server/terraform
         run: |
-          terraform init -reconfigure -backend-config="key=realworld-app/$TF_VAR_ENVIRONMENT/lambda.tfstate"
+          terraform init
+          terraform workspace select -or-create ${{ inputs.environment }}
           terraform refresh
           terraform apply -auto-approve
           echo "API_GATEWAY_URL=$(terraform output API_GATEWAY_URL | jq -r)" >> $GITHUB_OUTPUT
         env:
           TF_VAR_DATABASE_URL: ${{ steps.dburl.outputs.DATABASE_URL }}
-          TF_VAR_ENVIRONMENT: ${{ inputs.environment }}
 
       - name: Wait ${{ inputs.environment }}
         run: |
