--- a/.github/workflows/clear.yaml
+++ b/.github/workflows/clear.yaml
@@ -8,17 +8,12 @@ on:
       environment:
         required: true
         type: string
-      continue-on-error:
-        required: false
-        type: boolean
-        default: false
 
 env:
   DB_NAME: realworld-app
   ORG_NAME: santunioni
   PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_TOKEN_ID }}
   PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_TOKEN }}
-  environment: ephemeral-pr-${{ github.event.pull_request.number }}
 
 concurrency:
   group: ${{ inputs.environment }}
@@ -41,16 +36,17 @@ jobs:
           terraform_version: 1.4.4
           terraform_wrapper: false
 
-      - name: Clear Ephemeral Environments
-        continue-on-error: ${{ inputs.continue-on-error }}
+      - name: Terraform Destroy
         working-directory: packages/server/terraform
         run: |
           touch lambda.zip
-          terraform init -reconfigure -backend-config="key=realworld-app/$TF_VAR_ENVIRONMENT/lambda.tfstate"
+          terraform init
+          terraform workspace select ${{ inputs.environment }} || exit 0
           terraform refresh
           terraform destroy -auto-approve
+          terraform workspace select default
+          terraform workspace delete ${{ inputs.environment }}
         env:
-          TF_VAR_ENVIRONMENT: ${{ inputs.environment }}
           TF_VAR_DATABASE_URL: mysql://realworld-app:realworld-app@localhost:3306/realworld-app
 
   pscale:
@@ -58,10 +54,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Turn Down Database
-        continue-on-error: ${{ inputs.continue-on-error }}
+      - name: Database Branch Delete
         working-directory: scripts/pscale
         run: |
           . functions.sh
 
-          pscale branch delete $DB_NAME ${{ inputs.environment }} --org $ORG_NAME --force
+          BRANCH_EXISTS=$(pscale branch list $DB_NAME --org $ORG_NAME --format json | jq -r '.[] | select(.name == "${{ inputs.environment }}") | .name')
+          if [ -z "$BRANCH_EXISTS" ]; then
+            echo "Branch ${{ inputs.environment }} does not exist"
+            exit 0
+          fi
+
+          pscale branch delete $DB_NAME $BRANCH_EXISTS --org $ORG_NAME --force
