chore: bring parameters to terraform

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -14,7 +14,6 @@ env:
   ORG_NAME: santunioni
   PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_TOKEN_ID }}
   PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_TOKEN }}
-  BRANCH_NAME: main
 
 jobs:
   deploy:
@@ -29,7 +28,7 @@ jobs:
         with:
           db_name: ${{ env.DB_NAME }}
           org_name: ${{ env.ORG_NAME }}
-          branch_name: ${{ env.BRANCH_NAME }}
+          branch_name: main
 
       - run: npm install
         shell: bash
