--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,7 +2,7 @@
   "name": "@packages/server",
   "version": "0.0.1",
   "author": "Vinícius Vargas",
-  "private": false,
+  "private": true,
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^9.3.12",
     "@nestjs/swagger": "^6.3.0",
     "@trpc/server": "^10.20.0",
+    "node": "^18",
     "aws-lambda": "^1.0.7",
     "aws-serverless-express": "^3.4.0",
     "axios": "^1.3.4",
