--- a/package.json
+++ b/package.json
@@ -1,31 +1,26 @@
 {
   "name": "realworld-app",
-  "version": "0.0.1",
-  "description": "An API for publishing and reading articles.",
+  "version": "1.0.0",
   "author": "Vinícius Vargas",
   "private": true,
-  "license": "MIT",
   "scripts": {
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^16",
     "@vercel/ncc": "^0.36.1",
-    "jest": "^29.5.0",
-    "prettier": "^2.8.7",
+    "jest": "^28.1.0",
     "prettier-plugin-organize-imports": "^3.2.2",
-    "source-map-support": "^0.5.21",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
-    "ts-node": "10.9.1",
-    "typescript": "5.0.3"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.3",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
   },
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
-  },
+  "workspaces": [
+    "packages/*"
+  ],
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all",
