--- a/packages/acceptance/package.json
+++ b/packages/acceptance/package.json
@@ -9,9 +9,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@packages/server": "0.0.1",
-    "@trpc/client": "^10.20.0",
-    "node": "^18"
+    "@packages/server": "1.0.0",
+    "@trpc/client": "^10.20.0"
   },
   "devDependencies": {},
   "jest": {
