--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@packages/server",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "author": "Vinícius Vargas",
   "private": true,
   "license": "MIT",
@@ -31,7 +31,6 @@
     "@nestjs/platform-express": "^9.3.12",
     "@nestjs/swagger": "^6.3.0",
     "@trpc/server": "^10.20.0",
-    "node": "^18",
     "aws-lambda": "^1.0.7",
     "aws-serverless-express": "^3.4.0",
     "axios": "^1.3.4",
@@ -61,23 +60,11 @@
     "@types/aws-serverless-express": "^3.3.5",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.15.11",
     "@types/passport-http": "^0.3.9",
     "@types/passport-jwt": "^3.0.8",
-    "@vercel/ncc": "^0.36.1",
-    "jest": "^29.5.0",
     "lorem-ipsum": "^2.0.8",
-    "prettier": "^2.8.7",
-    "prettier-plugin-organize-imports": "^3.2.2",
-    "source-map-support": "^0.5.21",
-    "swagger-ui-express": "^4.6.2",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
-    "ts-node": "10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "5.0.3"
+    "swagger-ui-express": "^4.6.2"
   },
   "jest": {
     "testEnvironment": "node",
