--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
-    "composite": true,
+    "outDir": "dist",
+    "strict": true,
+    "target": "es2016",
+    "lib": ["es2019"],
+    "module": "commonjs",
+    "moduleResolution": "node",
     "sourceMap": true,
     "experimentalDecorators": true,
     "pretty": true,
@@ -9,11 +14,9 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "skipLibCheck": true,
-    "types": ["node", "jest"],
     "paths": {
-      "*": ["./node_modules/*"],
-      "@packages/*": ["./packages/*/src"]
+      "@packages/*": ["./packages/*"]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "bin"]
 }
