--- a/packages/acceptance/tsconfig.json
+++ b/packages/acceptance/tsconfig.json
@@ -1,20 +1,10 @@
 {
   "extends": "./../../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es2017",
-    "sourceMap": true,
-    "outDir": "./dist",
     "baseUrl": ".",
-    "incremental": true,
-    "skipLibCheck": true,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true
+    "target": "es2017",
+    "sourceMap": true
   }
 }
