--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,8 +7,8 @@
     "build:server": "ncc build src/server.ts --minify --out build/server",
     "build": "npm run build:lambda && npm run build:server",
     "build:server:start": "NODE_ENV=production node build/server/index.js",
-    "start:dev": "NODE_ENV=development nest start",
-    "start:debug": "NODE_ENV=development nest start --debug --watch",
+    "start:dev": "NODE_ENV=development nest start --debug",
+    "start:watch": "NODE_ENV=development nest start --debug --watch",
     "typecheck": "tsc --noEmit",
     "openapi": "ts-node src/nest/openapi.ts",
     "typeorm": "ts-node --compilerOptions '{\"emitDecoratorMetadata\":true,\"experimentalDecorators\":true,\"target\":\"es6\"}' --transpile-only $(which typeorm) --dataSource ./ormconfig.ts",
