--- a/packages/acceptance/package.json
+++ b/packages/acceptance/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "scripts": {
     "test": "DRIVER=trpc jest && DRIVER=rest jest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint --ext .ts src",
+    "lint:fix": "eslint --ext .ts src --fix"
   },
   "dependencies": {
     "@packages/server": "1.0.0",
