--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "infra": "docker-compose up -d && docker-compose logs -f"
   },
   "devDependencies": {
-    "node": "^18.15.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^18.15.13",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "@vercel/ncc": "^0.36.1",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.0",
-    "prettier-plugin-organize-imports": "^3.2.2",
+    "node": "^18.15.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
+    "prettier": "2.8.7",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "ts-jest": "^28.0.3",
     "ts-node": "^10.8.1",
-    "eslint": "8.39.0",
     "typescript": "^5.0.4"
   },
   "workspaces": [
@@ -30,6 +34,8 @@
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all",
-    "semi": false
+    "semi": false,
+    "bracketSameLine": true,
+    "arrowParens": "avoid"
   }
 }
