chore change prettier to 120

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "trailingComma": "all",
     "semi": false,
     "bracketSameLine": true,
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "printWidth": 120
   }
 }
