--- a/package.json
+++ b/package.json
@@ -3,20 +3,30 @@
   "version": "1.0.0",
   "author": "Vinícius Vargas",
   "private": true,
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "infra": "docker-compose up -d && docker-compose logs -f"
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
-    "@types/node": "^16",
+    "@types/node": "^18.15.13",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "@vercel/ncc": "^0.36.1",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.0",
-    "prettier-plugin-organize-imports": "^3.2.2",
+    "node": "^18.15.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
+    "prettier": "2.8.7",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "ts-jest": "^28.0.3",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
+    "typescript": "^5.0.4"
   },
   "workspaces": [
     "packages/*"
@@ -24,6 +34,9 @@
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all",
-    "semi": false
+    "semi": false,
+    "bracketSameLine": true,
+    "arrowParens": "avoid",
+    "printWidth": 120
   }
 }
