--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,10 +7,9 @@
     "build:server": "ncc build src/server.ts --minify --out build/server",
     "build": "npm run build:lambda && npm run build:server",
     "build:server:start": "NODE_ENV=production node build/server/index.js",
-    "start:dev": "NODE_ENV=development nest start",
-    "start:debug": "NODE_ENV=development nest start --debug --watch",
+    "start:dev": "NODE_ENV=development nest start --debug",
+    "start:watch": "NODE_ENV=development nest start --debug --watch",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "openapi": "ts-node src/nest/openapi.ts",
     "typeorm": "ts-node --compilerOptions '{\"emitDecoratorMetadata\":true,\"experimentalDecorators\":true,\"target\":\"es6\"}' --transpile-only $(which typeorm) --dataSource ./ormconfig.ts",
     "migration:run": "npm run typeorm migration:run",
@@ -18,7 +17,9 @@
     "migration:revert": "npm run typeorm migration:revert",
     "migration:show": "npm run typeorm migration:show",
     "migration:check": "npm run typeorm migration:generate migrations -- --check",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint \"src/**/*.ts\"",
+    "lint:fix": "eslint \"src/**/*.ts\" --fix"
   },
   "dependencies": {
     "@nestjs/common": "^9.3.12",
