--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "concurrently": "^8.0.1",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-config-next": "13.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.0",
     "node": "^18.15.0",
