--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,10 +13,16 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@packages/server": "1.0.0",
+    "@tanstack/react-query": "^4.29.3",
+    "@trpc/client": "^10.21.1",
+    "@trpc/next": "^10.21.1",
+    "@trpc/react-query": "^10.21.1",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "next": "13.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.21.4"
   }
 }
