--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,6 +18,7 @@
     "@trpc/client": "^10.21.1",
     "@trpc/next": "^10.21.1",
     "@trpc/react-query": "^10.21.1",
+    "@trpc/server": "^10.21.1",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "next": "13.3.1",
