--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -58,6 +58,7 @@
     "@types/aws-lambda": "^8.10.114",
     "@types/aws-serverless-express": "^3.3.5",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/passport-http": "^0.3.9",
