--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -17,5 +17,5 @@
     "incremental": true
   },
   "include": ["next-env.d.ts", "./src/**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist", "../server/src", "./../server/src", "../server/src/articles/articles.mock.ts"]
 }
