--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   },
   "scripts": {
     "format": "prettier --write .",
-    "infra": "docker-compose up -d && docker-compose logs -f"
+    "infra": "docker-compose up -d --wait && npm run migration:run --workspace packages/server && docker-compose logs -f",
+    "typecheck": "npm run typecheck --workspaces --if-present",
+    "lint:fix": "npm run lint:fix --workspaces --if-present",
+    "start:dev": "DEBUG=1 concurrently --kill-others --kill-others-on-fail \"npm run start:dev --workspace packages/server\" \"npm run start:dev --workspace packages/client\"",
+    "start:watch": "DEBUG=1 concurrently --kill-others --kill-others-on-fail \"npm run start:watch --workspace packages/server\" \"npm run start:watch --workspace packages/client\""
   },
   "devDependencies": {
     "@types/jest": "^27.5.1",
@@ -16,7 +20,9 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vercel/ncc": "^0.36.1",
+    "concurrently": "^8.0.1",
     "eslint": "^8.39.0",
+    "eslint-config-next": "13.3.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.0",
@@ -26,7 +32,7 @@
     "prettier-plugin-organize-imports": "^3.2.2",
     "ts-jest": "^28.0.3",
     "ts-node": "^10.8.1",
-    "typescript": "^5.0.4"
+    "typescript": "^4.9.5"
   },
   "workspaces": [
     "packages/*"
