--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
+    "start:dev": "next dev -p 3001",
     "start:watch": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
@@ -12,14 +13,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@packages/server": "1.0.0",
+    "@tanstack/react-query": "^4.29.3",
+    "@trpc/client": "^10.21.1",
+    "@trpc/next": "^10.21.1",
+    "@trpc/react-query": "^10.21.1",
+    "@trpc/server": "^10.21.1",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "eslint-config-next": "13.3.1",
     "next": "13.3.1",
-    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "zod": "^3.21.4"
   }
 }
