--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -15,6 +16,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "./src/**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", "dist", "../server/src", "./../server/src", "../server/src/articles/articles.mock.ts"]
 }
